--- a/small_n_stats_WPF/small_n_stats_WPF/Views/IntroWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/IntroWindow.xaml
@@ -97,6 +97,11 @@
                             base64enc (R package)
                         </Paragraph>
                     </ListItem>
+                    <ListItem x:Name="nls2" TextBlock.Foreground="Red">
+                        <Paragraph>
+                            nls2 (R package)
+                        </Paragraph>
+                    </ListItem>                    
                 </List>
                 <Paragraph>
                     <Run Text="Status:" />
