--- a/small_n_stats_WPF/small_n_stats_WPF/Views/DemandCurveUnifiedWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/DemandCurveUnifiedWindow.xaml
@@ -11,7 +11,7 @@
         WindowStartupLocation="CenterOwner"
         Title="Demand Curve Fitting" 
         ResizeMode="NoResize"
-        Height="555"
+        Height="560"
         Width="415">
 
     <Window.Style>
@@ -48,7 +48,7 @@
 
         <!-- Pre-sized main display, advanced window to claim unused space on resize -->
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="400"></ColumnDefinition>
+            <ColumnDefinition Width="410"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
@@ -567,6 +567,27 @@
                 </StackPanel>
 
                 <!--
+                
+                <Label Margin="0,10,0,0" FontWeight="Bold" Content="Fit Measures"/>
+
+                <RadioButton x:Name="gofBIC"
+                             GroupName="gofMeasure" 
+                             Content="Bayesian Information Criterion" 
+                             IsChecked="{Binding Path=UseBIC, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="15,0,0,0"/>
+
+                <RadioButton x:Name="gofAIC"
+                             GroupName="gofMeasure" 
+                             Content="Akaike Information Criterion" 
+                             IsChecked="{Binding Path=UseAIC, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="15,0,0,0" />
+
+                <RadioButton x:Name="gofR2"
+                             GroupName="gofMeasure" 
+                             Content="R-squared approximation" 
+                             IsChecked="{Binding Path=UseR2, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="15,0,0,0" />
+
 
                     -->
 
