--- a/small_n_stats_WPF/small_n_stats_WPF/Views/DemandCurveUnifiedWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/DemandCurveUnifiedWindow.xaml
@@ -12,7 +12,7 @@
         Title="Demand Curve Fitting" 
         ResizeMode="NoResize"
         Height="560"
-        Width="415">
+        Width="830">
 
     <Window.Style>
         <Style TargetType="Window">
@@ -63,9 +63,9 @@
                 <RowDefinition Height="45"></RowDefinition>
                 <RowDefinition Height="45"></RowDefinition>
                 <RowDefinition Height="45"></RowDefinition>                
-                <RowDefinition Height="30"></RowDefinition>
-                <RowDefinition Height="30"></RowDefinition>
-                <RowDefinition Height="40"></RowDefinition>
+                <RowDefinition Height="35"></RowDefinition>
+                <RowDefinition Height="35"></RowDefinition>
+                <RowDefinition Height="35"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="50"></RowDefinition>
             </Grid.RowDefinitions>
@@ -173,7 +173,7 @@
                     x:Name="rowSelectionButton"
                     Grid.Column="0"
                     GroupName="Selections"
-                    Content="Horizontal Data (Left to Right)"
+                    Content="Horizontal Data (L to R)"
                     Width="Auto"
                     Margin="20,5,5,5"
                     IsChecked="{Binding Path=RowModeRadio, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
@@ -182,7 +182,7 @@
                 <RadioButton 
                     Grid.Column="2"
                     GroupName="Selections"
-                    Content="Vertical Data (Top to Bottom)"
+                    Content="Vertical Data (T to B)"
                     Width="Auto"
                     Margin="20,5,5,5"
                     IsChecked="{Binding Path=ColumnModeRadio, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
@@ -199,28 +199,9 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-
-                <RadioButton 
-                    x:Name="singleCalculationButton"
-                    Grid.Column="0"
-                    GroupName="Setting"
-                    Content="Single Calculation"
-                    Width="Auto"
-                    Margin="20,5,5,5"
-                    IsChecked="{Binding Path=SingleModeRadio, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                </RadioButton>
-
-                <RadioButton 
-                    Grid.Column="2"
-                    GroupName="Setting"
-                    Content="Grouped Calculations"
-                    Width="Auto"
-                    Margin="20,5,5,5"
-                    IsChecked="{Binding Path=BatchModeRadio, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                </RadioButton>
             </Grid>
 
-            <Grid Grid.Row="6"
+            <Grid Grid.Row="5"
                   Grid.Column="0"
                   Grid.ColumnSpan="4"
                   HorizontalAlignment="Stretch"
@@ -268,7 +249,7 @@
             <FlowDocumentScrollViewer
                 Grid.Column="0"
                 Grid.ColumnSpan="4"
-                Grid.Row="7"
+                Grid.Row="6"
                 Grid.RowSpan="3"
                 IsSelectionEnabled="False"
                 VerticalScrollBarVisibility="Hidden">
@@ -330,18 +311,18 @@
             </Grid.Style>
 
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="100"></ColumnDefinition>
+                <ColumnDefinition Width="50"></ColumnDefinition>
+                <ColumnDefinition Width="150"></ColumnDefinition>
+                <ColumnDefinition Width="100"></ColumnDefinition>
             </Grid.ColumnDefinitions>
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="50"></RowDefinition>
                 <RowDefinition Height="25"></RowDefinition>
                 <RowDefinition Height="25"></RowDefinition>
-                <RowDefinition Height="50"></RowDefinition>
-                <RowDefinition Height="50"></RowDefinition>
+                <RowDefinition Height="80"></RowDefinition>
+                <RowDefinition Height="25"></RowDefinition>
                 <RowDefinition Height="50"></RowDefinition>
                 <RowDefinition Height="50"></RowDefinition>
                 <RowDefinition Height="55"></RowDefinition>
@@ -374,14 +355,15 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Label Content="Model to use in curve-fitting software (each has individual settings)?"
+                <Label Content="Model to use in curve-fitting software?"
                        Margin="20,0,5,0"
                        FontWeight="Bold"
                        Grid.Row="0"
                        Grid.Column="0"
-                       Grid.ColumnSpan="2">                    
+                       Grid.ColumnSpan="4">                    
                 </Label>
                 
                 <RadioButton 
@@ -389,21 +371,39 @@
                     Grid.Column="0"
                     Grid.Row="1"
                     GroupName="Model"
-                    Content="Use Exponential Model"
+                    Content="Exponential"
                     Width="Auto"
                     Margin="20,5,5,5"
-                    IsChecked="{Binding Path=HurshModel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                    IsChecked="{Binding Path=HurshModel, 
+                        Mode=TwoWay, 
+                        UpdateSourceTrigger=PropertyChanged}">
                 </RadioButton>
 
                 <RadioButton 
                     x:Name="koffRadioButton"
+                    Grid.Column="1"
+                    Grid.Row="1"
+                    GroupName="Model"
+                    Content="Exponentiated"
+                    Width="Auto"
+                    Margin="20,5,5,5"
+                    IsChecked="{Binding Path=KoffarnusModel, 
+                        Mode=TwoWay, 
+                        UpdateSourceTrigger=PropertyChanged}">
+                </RadioButton>
+
+                <RadioButton 
+                    x:Name="linearRadioButton"
                     Grid.Column="2"
                     Grid.Row="1"
                     GroupName="Model"
-                    Content="Use Exponentiated Model"
+                    Content="Linear"
                     Width="Auto"
                     Margin="20,5,5,5"
-                    IsChecked="{Binding Path=KoffarnusModel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                    IsEnabled="False"
+                    IsChecked="{Binding Path=LinearModel, 
+                        Mode=TwoWay, 
+                        UpdateSourceTrigger=PropertyChanged}">
                 </RadioButton>
             </Grid>
 
@@ -415,15 +415,33 @@
                 HorizontalAlignment="Left"
                 Margin="15,5,5,5">
 
-                <Label FontWeight="Bold">Rule for values when X == 0?</Label>
+                <Label FontWeight="Bold">Q0e Settings:</Label>
                 <RadioButton GroupName="Xsettings" 
-                             Content="Keep Value" 
-                             IsChecked="{Binding Path=KeepXValues, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Content="Drop Q0" 
+                             IsChecked="{Binding Path=DropXValues, 
+                                Mode=TwoWay, 
+                                UpdateSourceTrigger=PropertyChanged}"
                              Margin="15,0,0,0" />
+                
                 <RadioButton GroupName="Xsettings" 
-                             Content="Drop Value" 
-                             IsChecked="{Binding Path=DropXValues, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Content="Keep Q0" 
+                             IsChecked="{Binding Path=KeepXValues, 
+                                Mode=TwoWay, 
+                                UpdateSourceTrigger=PropertyChanged}"
                              Margin="15,0,0,0" />
+
+                <RadioButton GroupName="Xsettings" 
+                             Content="Modify Q0" 
+                             IsChecked="{Binding Path=modifyXValues, 
+                                Mode=TwoWay, 
+                                UpdateSourceTrigger=PropertyChanged}"
+                             Margin="15,0,0,0" />
+
+                <TextBox x:Name="q0eModifyValue"
+                         Margin="15,0,0,0" 
+                         VerticalContentAlignment="Center"
+                         Text="{Binding ModifiedQ0Value}">
+                </TextBox>
             </StackPanel>
 
             <StackPanel
@@ -434,7 +452,7 @@
                 HorizontalAlignment="Left"
                 Margin="15,5,5,5">
 
-                <Label FontWeight="Bold">Rule for values when Y == 0?</Label>
+                <Label FontWeight="Bold">Rules when Y == 0</Label>
                 <RadioButton GroupName="Ysettings" 
                              Content="Keep Value" 
                              IsChecked="{Binding Path=KeepYValues, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -474,6 +492,144 @@
 
             </StackPanel>
 
+            <StackPanel
+                Grid.Row="8"
+                Grid.RowSpan="2"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                HorizontalAlignment="Left"
+                Margin="15,5,5,5">
+
+                <Label FontWeight="Bold">Rules for K</Label>
+                <RadioButton GroupName="Ksettings" 
+                             Content="Individual K" 
+                             IsChecked="{Binding Path=IndividualizedKValue, 
+                                Mode=TwoWay, 
+                                UpdateSourceTrigger=PropertyChanged}"
+                             Margin="15,0,0,0" />
+
+                <RadioButton GroupName="Ksettings" 
+                             Content="Fitted K" 
+                             IsChecked="{Binding Path=FitKValue, 
+                                Mode=TwoWay, 
+                                UpdateSourceTrigger=PropertyChanged}"
+                             Margin="15,0,0,0" />
+
+                <RadioButton GroupName="Ksettings" 
+                             Content="Shared K" 
+                             IsChecked="{Binding Path=SharedKValue, 
+                                Mode=TwoWay, 
+                                UpdateSourceTrigger=PropertyChanged}"
+                             Margin="15,0,0,0"/>
+
+                <RadioButton GroupName="Ksettings" 
+                             Content="Custom K" 
+                             IsChecked="{Binding Path=CustomKValue, 
+                                Mode=TwoWay, 
+                                UpdateSourceTrigger=PropertyChanged}"
+                             Margin="15,0,0,0"/>
+
+                <TextBox x:Name="kSettingsCustom" 
+                         Margin="35,0,0,0" 
+                         Text="{Binding CustomKValueField}"/>
+
+            </StackPanel>
+
+            <FlowDocumentScrollViewer
+                Grid.Column="2"
+                Grid.ColumnSpan="2"
+                Grid.Row="3"
+                Grid.RowSpan="7"
+                IsSelectionEnabled="False"
+                VerticalScrollBarVisibility="Hidden">
+                <FlowDocument>
+                    <FlowDocument.Resources>
+                        <Style TargetType="{x:Type Paragraph}">
+                            <Setter Property="Margin" Value="0"/>
+                            <Setter Property="Padding" Value="0"/>
+                        </Style>
+                    </FlowDocument.Resources>
+                    <Paragraph FontSize="12" FontFamily="Segoe UI">
+                        <Bold>Notes:</Bold>
+                    </Paragraph>
+                    <Paragraph FontSize="12" FontFamily="Segoe UI" Padding="0,5,0,0">
+                        Several settings can be overridden when default functions
+                        are either unsuited and undesired for a specific research
+                        question.  Caution is emphasized, as deviating from the defaults
+                        may yield improper analyses if not conducted with consultation
+                    </Paragraph>
+                </FlowDocument>
+            </FlowDocumentScrollViewer>            
+            
+            <!--
+            
+            <StackPanel
+                Grid.Row="8"
+                Grid.RowSpan="2"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                HorizontalAlignment="Left"
+                Margin="15,5,5,5">
+
+                <Label FontWeight="Bold">Q0 Fitting (Advanced)</Label>
+
+                <RadioButton x:Name="q0Setting1"
+                             GroupName="Qsettings" 
+                             Content="Fit parameter" 
+                             IsChecked="{Binding Path=FitQ0, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="15,0,0,0"/>
+
+                <RadioButton x:Name="q0Setting2"
+                             GroupName="Qsettings" 
+                             Content="Fix to value" 
+                             IsChecked="{Binding Path=FixQ0, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="15,0,0,0" />
+
+                <TextBox x:Name="qFixedValue"
+                         Margin="15,0,0,0" 
+                         VerticalContentAlignment="Center"
+                         Text="{Binding FixedQ0Value}">
+                </TextBox>
+
+                <RadioButton x:Name="q0Setting3"
+                             GroupName="Qsettings" 
+                             Content="Fit parameter (bounded)" 
+                             IsChecked="{Binding Path=BoundQ0, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="15,0,0,0" />
+
+                <StackPanel Orientation="Horizontal"
+                            Width="Auto">
+                    <Label Margin="15,0,0,0"
+                           Width="55">Lower:</Label>
+                    <TextBox x:Name="QRangeLow"
+                         Margin="15,0,0,0" 
+                         VerticalContentAlignment="Center"
+                             HorizontalContentAlignment="Stretch"
+                             HorizontalAlignment="Stretch"
+                             Width="90"
+                         Text="{Binding BoundQ0ValueLow}">
+                    </TextBox>
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal"
+                            Width="Auto">
+                    <Label Margin="15,0,0,0" 
+                           Width="55">Upper:</Label>
+                    <TextBox x:Name="QRangeHigh"
+                         Margin="15,0,0,0" 
+                         VerticalContentAlignment="Center"
+                         HorizontalContentAlignment="Stretch"
+                         HorizontalAlignment="Stretch"
+                         Width="90"
+                         Text="{Binding BoundQ0ValueHigh}">
+                    </TextBox>
+                </StackPanel>
+            </StackPanel>
+            
+            -->
+
+            <!--
+            
             <StackPanel
                 Grid.Row="3"
                 Grid.RowSpan="7"
@@ -565,8 +721,6 @@
                          Text="{Binding BoundKValueHigh}">
                     </TextBox>
                 </StackPanel>
-
-                <!--
                 
                 <Label Margin="0,10,0,0" FontWeight="Bold" Content="Fit Measures"/>
 
@@ -588,76 +742,9 @@
                              IsChecked="{Binding Path=UseR2, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                              Margin="15,0,0,0" />
 
-
-                    -->
-
-
-
-
             </StackPanel>
 
-            <StackPanel
-                Grid.Row="8"
-                Grid.RowSpan="2"
-                Grid.Column="0"
-                Grid.ColumnSpan="2"
-                HorizontalAlignment="Left"
-                Margin="15,5,5,5">
-
-                <Label FontWeight="Bold">Q0 Fitting (Advanced)</Label>
-
-                <RadioButton x:Name="q0Setting1"
-                             GroupName="Qsettings" 
-                             Content="Fit parameter" 
-                             IsChecked="{Binding Path=FitQ0, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                             Margin="15,0,0,0"/>
-                
-                <RadioButton x:Name="q0Setting2"
-                             GroupName="Qsettings" 
-                             Content="Fix to value" 
-                             IsChecked="{Binding Path=FixQ0, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                             Margin="15,0,0,0" />
-
-                <TextBox x:Name="qFixedValue"
-                         Margin="15,0,0,0" 
-                         VerticalContentAlignment="Center"
-                         Text="{Binding FixedQ0Value}">
-                </TextBox>
-
-                <RadioButton x:Name="q0Setting3"
-                             GroupName="Qsettings" 
-                             Content="Fit parameter (bounded)" 
-                             IsChecked="{Binding Path=BoundQ0, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                             Margin="15,0,0,0" />
-
-                <StackPanel Orientation="Horizontal"
-                            Width="Auto">
-                    <Label Margin="15,0,0,0"
-                           Width="55">Lower:</Label>
-                    <TextBox x:Name="QRangeLow"
-                         Margin="15,0,0,0" 
-                         VerticalContentAlignment="Center"
-                             HorizontalContentAlignment="Stretch"
-                             HorizontalAlignment="Stretch"
-                             Width="90"
-                         Text="{Binding BoundQ0ValueLow}">
-                    </TextBox>
-                </StackPanel>
-
-                <StackPanel Orientation="Horizontal"
-                            Width="Auto">
-                    <Label Margin="15,0,0,0" 
-                           Width="55">Upper:</Label>
-                    <TextBox x:Name="QRangeHigh"
-                         Margin="15,0,0,0" 
-                         VerticalContentAlignment="Center"
-                         HorizontalContentAlignment="Stretch"
-                         HorizontalAlignment="Stretch"
-                         Width="90"
-                         Text="{Binding BoundQ0ValueHigh}">
-                    </TextBox>
-                </StackPanel>
-            </StackPanel>
+            -->
 
             <!--
             
