--- a/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
@@ -121,8 +121,12 @@
                                   Command="{Binding RDotNetLicenseWindowCommand}">
                         </MenuItem>
 
-                        <MenuItem Header="SharpVectors License (BSD 3-Clause)" 
-                                  Command="{Binding SharpVectorGraphicsLicenseWindowCommand}">
+                        <MenuItem Header="devtools R Package (GPLv2)"
+                                  Command="{Binding DevtoolsLicenseWindowCommand}">
+                        </MenuItem>
+
+                        <MenuItem Header="digest R Package (GPLv2)"
+                                  Command="{Binding DigestLicenseWindowCommand}">
                         </MenuItem>
 
                         <MenuItem Header="nlmrt R Package (GPLv2)"
@@ -131,14 +135,6 @@
 
                         <MenuItem Header="nlstools R Package (GPLv2)"
                                   Command="{Binding NlstoolsLicenseWindowCommand}">
-                        </MenuItem>
-
-                        <MenuItem Header="base64enc R Package (GPLv2)"
-                                  Command="{Binding BaseEncodeLicenseWindowCommand}">
-                        </MenuItem>
-
-                        <MenuItem Header="ggplot2 R Package (GPLv2)"
-                                  Command="{Binding Ggplot2LicenseWindowCommand}">
                         </MenuItem>
 
                         <MenuItem Header="Beezdemand R Package (GPLv2)"
