--- a/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
@@ -213,8 +213,8 @@
                             </MenuItem.Icon>
                         </MenuItem>
 
-                        <MenuItem Header="EPPlus (GPLv2)"
-                                  Command="{Binding EPPLicenseWindowCommand}">
+                        <MenuItem Header="Reogrid (MIT)"
+                                  Command="{Binding ReogridLicenseWindowCommand}">
                             <MenuItem.Icon>
                                 <Image Source="/Resources/Textfile_818_16x.png"/>
                             </MenuItem.Icon>
