added methods for extended calculations

--- a/small_n_stats_WPF/small_n_stats_WPF/Views/DemandCurveUnifiedWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/DemandCurveUnifiedWindow.xaml
@@ -246,6 +246,7 @@
                     Grid.ColumnSpan="4"
                     Margin="10"
                     Content="Calculate"
+                    IsEnabled="{Binding CanLaunch}"
                     Command="{Binding CalculateScoresCommand}">
             </Button>
         </Grid>
